# biotrack

./: .gitignore  CLAUDE.md  DATABASE_ARCHITECTURE.md  DEVELOPMENT.md  Dockerfile  EMAIL_DELIVERABILITY.md  EMAIL_SETUP.md  INVITATION_FLOW_IMPLEMENTATION.md  PATIENT_DETAILS_PRELOADING.md  PRD.md  README.md  SECURITY_NOTICE.md  STRIPE_SETUP.md  api-test.html  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  railway.toml  run-dev.sh  run-frontend-only.sh  start-dev.sh  tsconfig.app.json  tsconfig.test.json  vite.config.ts  vitest.config.ts
backend/: .env.example  Dockerfile  Dockerfile.backend  alembic.ini  docker-compose.yml  populate_antibiotics.py  pyproject.toml  railway.toml  requirements.txt  seed_antibiotics.py  seed_diagnostic_categories.py  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 25f33dd1fe45_add_email_verification_and_invitation_.py  295b25cb45c8_initial_migration.py  3edbc464404d_add_teams_and_multi_tenancy.py  62e9fafd99f7_change_patient_rut_unique_constraint_to_.py  7916bc04a105_add_users_and_auth_tracking.py  add_diagnostic_categories.py  antibiotics_add.py  cd23445f8fac_add_unit_bed_number_and_has_ending_soon_.py  f2d7b7f26a90_increase_subcategory_name_length.py  merge_before_diagnostic_categories.py
backend/app/: auth.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: antibiotics.py  auth.py  bed_configurations.py  bed_history.py  (+9 more)
backend/tests/: conftest.py  test_diagnostic_categories.py  test_patients_auth.py
(+109 files in other folders)
